--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -90,6 +90,9 @@
     <Reference Include="CSExeCOMServer">
       <HintPath>..\CSExeCOMServer.exe</HintPath>
     </Reference>
+    <Reference Include="MathNet.Numerics, Version=5.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\MathNet.Numerics.5.0.0\lib\net48\MathNet.Numerics.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Windows.Forms.DataVisualization" />
@@ -110,8 +113,10 @@
     </Compile>
     <Compile Include="Classes\RecordSet.cs" />
     <Compile Include="Classes\Simulation\Init.cs" />
+    <Compile Include="Classes\Simulation\SimulationSPK.cs" />
     <Compile Include="Classes\Simulation\SimulationStrombedarf.cs" />
     <Compile Include="Classes\Simulation\SimulationWaermebedarf.cs" />
+    <Compile Include="Classes\Simulation\SimulationWaermepumpe.cs" />
     <Compile Include="Classes\StromTestClass.cs" />
     <Compile Include="Classes\WaermepumpenImport.cs" />
     <Compile Include="Controller\ApplikationCtrl.cs" />
@@ -331,6 +336,12 @@
     <Compile Include="Views\Wizard\Wizard_Gebaeude.Designer.cs">
       <DependentUpon>Wizard_Gebaeude.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Wizard\Wizard_Kessel.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Wizard\Wizard_Kessel.Designer.cs">
+      <DependentUpon>Wizard_Kessel.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Wizard\Wizard_Prozess.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -537,6 +548,9 @@
     <EmbeddedResource Include="Views\Wizard\WizardParent.resx">
       <DependentUpon>WizardParent.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Views\Wizard\Wizard_Kessel.resx">
+      <DependentUpon>Wizard_Kessel.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Views\Wizard\Wizard_Referenz.resx">
       <DependentUpon>Wizard_Referenz.cs</DependentUpon>
     </EmbeddedResource>
@@ -602,6 +616,7 @@
       <DependentUpon>Kenndaten.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="app.config" />
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
