--- a/WindowsFormsApplication1/WindowsFormsApplication1.csproj
+++ b/WindowsFormsApplication1/WindowsFormsApplication1.csproj
@@ -330,6 +330,12 @@
     <Compile Include="Views\Stromverbraucher\Form_Stromverbraucher_Admin.designer.cs">
       <DependentUpon>Form_Stromverbraucher_Admin.cs</DependentUpon>
     </Compile>
+    <Compile Include="Views\Wizard\Form_ErgebnisSpk.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\Wizard\Form_ErgebnisSpk.designer.cs">
+      <DependentUpon>Form_ErgebnisSpk.cs</DependentUpon>
+    </Compile>
     <Compile Include="Views\Wizard\Wizard_Gebaeude.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -544,6 +550,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Stromverbraucher\Form_StromverbraucherEingabe.resx">
       <DependentUpon>Form_StromverbraucherEingabe.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Views\Wizard\Form_ErgebnisSpk.resx">
+      <DependentUpon>Form_ErgebnisSpk.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Views\Wizard\WizardParent.resx">
       <DependentUpon>WizardParent.cs</DependentUpon>
