--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,6 @@
 ###############################################################################
 # Set default behavior to automatically normalize line endings.
 * text=auto
-
 # Set default behavior for command prompt diff.
 #
 # This is need for earlier builds of msysgit that does not have it on by
@@ -47,5 +46,7 @@
 #*.PDF   diff=astextplain
 #*.rtf   diff=astextplain
 #*.RTF   diff=astextplain
+*accdb filter=lfs diff=lfs merge=lfs -text
+*.accdb filter=lfs diff=lfs merge=lfs -text
 Kenndaten.accdb filter=lfs diff=lfs merge=lfs -text
 Kenndaten_Backup.accdb filter=lfs diff=lfs merge=lfs -text
